# APMA2822B

ARRAYS/: ex1.cpp  ex1_timers  ex1_timers.cpp  job.launcher
ARRAYS/outs/: job.73060.out  job.73072.out  job.73086.out  job.73099.out
DOT_PRODUCT/: a.out  dot.cu
GPU/: Makefile
GPU/launchers/: dot.launcher  vm.launcher  vm_mc.launcher
GPU/src/: vector_matrix_mul.cu  vm_memstream.cu
HW1/: Makefile  mv_mult_column_major  mv_mult_column_major.cpp  mv_mult_contiguous  mv_mult_contiguous.cpp  mv_mult_loop_unrolling  mv_mult_loop_unrolling.cpp  mv_mult_padding  mv_mult_padding.cpp  mv_mult_separate_rows  mv_mult_separate_rows.cpp  plot_roofline.py  run_all.sh
HW1/results/: results_column_major.csv  results_contiguous.csv  results_loop_unrolling.csv  results_padding.csv  results_separate_rows.csv
HW2/: Makefile  description.txt
HW2/launchers/: job.launcher  mpi.launcher  omp.launcher
HW2/src/: hw2.cpp  hw2_mpi.cpp  hw2_omp.cpp  plot_roofline.py
HW2/writeup/: writeup.tex
HW3/: CMakeLists.txt  Makefile
HW3/launchers/: gpu-mpi.launcher  gpu.launcher  python.launcher
HW3/src/: gpu.cu  gpu_mpi.cu  plot_roofline.py
HW3/writeup/: writeup.tex
PDE/: Makefile  pde.cpp  pde_mpi.cpp  rbparallel.cpp  redblack.cpp
PDE/launchers/: job.launcher  mpijob.launcher
PDE/outs/: job.78481.out  job.78482.out  job.78483.out  job.78484.out  job.78515.out  job.78516.out  job.78538.out
src/: hw2_mpi.cpp
